# email-formatter

./: .gitignore  README.md  prompt.md  pyproject.toml  render_newsletter.py  streamlit_app.py
templates/: newsletter.html.j2
